--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+EditorStartupMap=/Game/map/test.test
+LocalMapOptions=
+TransitionMap=/Game/map/test.test
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/map/test.test
+ServerDefaultMap=/Game/map/test.test
+GlobalDefaultGameMode=/Game/playerBP/arenamode.arenamode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -73,13 +85,13 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/MyProject2")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/MyProject2")
++ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/MyProject3")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/MyProject3")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=175FDD1C4F1E459D9BC9D5A8C0BEB1AD
+SecurityToken=863D703146A1AA137CB9A8A8917A0364
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
