--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -67,7 +67,9 @@ bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
 bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -76,6 +78,15 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="show score",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++AxisMappings=(AxisName="move forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="move right",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="move right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="look up",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="turn",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="move forward",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
